# MUDIDI-Pipeline-for-Digitization-of-Multilingual-Dictionary

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  mkdocs.yml  page_context.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docs.yml  web.yml
annotation/:  mapping.md  README.md  SPIKE_FINDINGS.md  lid_spike.py  script_check.py  tier2_labeler.py  tier2_recovery.py
annotation/docs/: SPIKE_FINDINGS.md  routing.md
annotation/examples/: move_lid_span.sh  run_labeler.sh  run_tunnel.sh  setup_label_studio.sh  start_label_studio.sh  sync_label_studio.sh
annotation/label_studio/: label_studio_ner.py  setup_ner_projects.py  span_schema.py  sync_from_label_studio.py
annotation/labelers/: labeler_common.py  script_check.py  script_labeler.py  tier1_labeler.py  tier2_labeler.py  tier2_recovery.py
annotation/spikes/: lid_spike.py
annotation/tests/: conftest.py  test_label_studio_ner.py  test_script_labeler.py  test_span_schema.py  test_sync_from_label_studio.py  test_tier1_labeler.py  test_tier2_recovery.py
assets/: PROMPT.json
docs/: CODEMAP.md  agentic_verifier_rewriter_plan.md  index.md  stage2-typography-vs-no-typography-report.md  stage_2_methodology.md  stimson-gemini-pro-vs-flash-report.md  uv.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/benchmarking/: evaluation.md  extraction.md  index.md  vlm.md
docs/concepts/: pipeline.md
docs/development/: architecture.md  cli-migration.md  pages.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/javascripts/: navigation.js  toc-panel.js
docs/production/: directory.md  index.md  local-web-app.md  outputs.md  pdf.md  stages-agentic.md
docs/reference/: cli.md  config.md  python-api.md
docs/stylesheets/: extra.css  navigation.css
evaluations/stage1_flat_eval_agentic_chukchi_evenki_test/: stage1_flat_eval_detailed.csv  stage1_flat_eval_per_language_script_detailed.csv  stage1_flat_eval_per_language_script_summary.csv  stage1_flat_eval_summary.csv
evaluations/stage1_flat_eval_agentic_patch_medium_chukchi/: stage1_flat_eval_detailed.csv  (+3 more)
examples/: README.md
label-studio/: requirements.txt  setup.py  sync_from_label_studio.py
plans/: README.md  local-web-app-blueprint.md  web-dashboard-simplification-blueprint.md
scripts/: export_label_studio_gold.py  generate_dictionary_languages_yaml.py  generate_docs_reference.py  migrate_legacy_outputs.py  move_lid_span.py  run_mathpix_convert.py  test_agentic_hallucination_recovery.py
src/mudidi/: paths.py
(+438 files in other folders)
