[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mudidi"
version = "0.1.0"
description = "Dictionary OCR and MDF extraction pipeline with benchmark and inference modes."
requires-python = ">=3.11"

dependencies = [
    "litellm>=1.87.0",
    "python-docx",
    "Pillow",
    "pydantic",
    "python-dotenv",
    "pandas",
    "scikit-learn",
    "python-Levenshtein",
    "grapheme",
    "jiwer",
    "sacrebleu",
    "pymupdf>=1.27.2.2",
    "scipy>=1.15.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "playwright>=1.50",
]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
]
paddle = [
    "paddlepaddle",
    "paddleocr",
]
web = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34",
]

[project.scripts]
mudidi = "mudidi.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mudidi"]

[tool.hatch.build.targets.wheel.force-include]
"src/mudidi/assets/PROMPT.json" = "mudidi/assets/PROMPT.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: live LLM API calls (set MUDIDI_LLM_INTEGRATION=1)",
]

[tool.uv]
package = true
